--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "kartik-v/yii2-widget-select2": "@dev",
         "nirvana-msu/yii2-showloading": "1.0.*@dev",
 
-        "kartik-v/yii2-widget-datetimepicker": "*"
+        "kartik-v/yii2-widget-datetimepicker": "*",
 
         "sadovojav/yii2-image-cutter": "dev-master",
         "bupy7/yii2-widget-cropbox": "*"
