--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
 
         "sadovojav/yii2-image-cutter": "dev-master",
         "bupy7/yii2-widget-cropbox": "*",
-        "kartik-v/yii2-widget-fileinput": "@dev",
+        "kartik-v/yii2-widget-fileinput": "@dev"
 
     },
     "require-dev": {
