Actualizar git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,5 +29,5 @@ phpunit.phar
 /web/assets/*
 /web/img/imagenesContenidos/*
 /web/img/gruposInteres/*
-/web/formacioncomunicaciones/contenidos/*
+/web/formacioncomunicaciones/contenidos/
 /uploads/
