--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
         "yiisoft/yii2-httpclient": "^2.0",
         "2amigos/yii2-date-picker-widget" : "*",
         "yiisoft/yii2-jui": "~2.0.0",
-        "kartik-v/yii2-widget-rating": "*"
+        "kartik-v/yii2-widget-rating": "*",
+        "mpdf/mpdf": "6"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
